src/objects/Training_Session__c.object
<CustomObject>
    <fields>
        <fullName>Authorization_Proof__c</fullName>
        <description>This field contains the various methods for Authentication</description>
        <inlineHelpText>Choose Valid Authentication Proof</inlineHelpText>
        <label>Authorization Proof</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Id Card</fullName>
                </value>
                <value>
                    <fullName>Pass Card</fullName>
                </value>
                <value>
                    <fullName>Mobile Number</fullName>
                </value>
                <value>
                    <fullName>Identity Number</fullName>
                </value>
                <value>
                    <fullName>Web ID</fullName>
                </value>
                <value>
                    <fullName>Aadhaar Card</fullName>
                </value>
                <value>
                    <fullName>Government Employee Pass</fullName>
                </value>
                <value>
                    <fullName>Access through OTP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Avg_Rating__c</fullName>
        <formula>Rating_Sum__c /  Count_Attendee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Attendee__c</fullName>
        <label>Count Attendee</label>
        <summaryForeignKey>Attendee__c.Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Sum__c</fullName>
        <label>Rating Sum</label>
        <summarizedField>Feedback__c.Rating__c</summarizedField>
        <summaryForeignKey>Feedback__c.Training_Session_Feedback__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <label>Training Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Training Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Sessions</pluralLabel>
    <recordTypes>
        <fullName>Webinar</fullName>
        <active>true</active>
        <label>Webinar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workshop</fullName>
        <active>true</active>
        <label>Workshop</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Future_Session_Date</fullName>
        <active>true</active>
        <description>Only future dates can be entered in the Session Date</description>
        <errorConditionFormula>Session_Date__c &lt;= Today()</errorConditionFormula>
        <errorMessage>Today and Past dates can not be entered in the session date.
Only future dates can be entered in the Session Date</errorMessage>
    </validationRules>
</CustomObject>